syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.huypva.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}